Add initial components and styling

--- a/client/src/styles/setup/_variables.scss
+++ b/client/src/styles/setup/_variables.scss
@@ -1,5 +1,9 @@
 // COLORS
 $off-black: #131313;
 $off-white: #f5f5f5;
+$chingu-blue: #0f1538;
+$chingu-green: #67DB90;
+$chingu-purple: #707396;
 
 // FONTS
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,400i,700');
