--- a/client/src/styles/components/_app.scss
+++ b/client/src/styles/components/_app.scss
@@ -5,3 +5,15 @@
   align-items: center;
   min-height: 100vh;
 }
+
+.app-card {
+  padding: 30px;
+  border-radius: 3px;
+  box-shadow: 0px 0px 20px 5px grey;
+  background-color: $chingu-blue;
+  color: $off-white;
+
+  h1 {
+    color: $chingu-green;
+  }
+}
