--- a/client/src/styles/components/_app.scss
+++ b/client/src/styles/components/_app.scss
@@ -9,7 +9,7 @@
 .app-card {
   padding: 30px;
   border-radius: 3px;
-  box-shadow: 0px 0px 20px 5px grey;
+  box-shadow: 0 10px 6px -6px grey;  
   background-color: $chingu-blue;
   color: $off-white;
 
