--- a/client/src/styles/components/_app.scss
+++ b/client/src/styles/components/_app.scss
@@ -6,6 +6,32 @@
   min-height: 100vh;
 }
 
+.login-button {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  padding: 10px 20px;
+  border-radius: 5px;
+  outline: none;
+  margin-top: 40px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  color: $off-white;
+  background-color: lighten($off-black, 10%);
+  cursor: pointer;
+  transition: 0.3s;
+
+  &:hover {
+    background-color: $off-black;
+    transition: 0.3s;
+  }
+}
+
+.login-button__icon {
+  padding-right: 10px;
+  font-size: 27px;
+}
+
 .app-card {
   padding: 30px;
   border-radius: 3px;
