--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,3 +1,6 @@
 @import './setup/variables';
 @import './setup/base';
+@import './components/navbar';
 @import './components/app';
+@import './components/landing';
+@import './components/userQuery';
