--- a/client/src/styles/setup/_base.scss
+++ b/client/src/styles/setup/_base.scss
@@ -7,3 +7,28 @@ html, body {
   padding: 0;
   font-family: 'Raleway', sans-serif;
 }
+
+.button {
+  font-family: 'Raleway', sans-serif;
+  border-radius: 5px;
+  outline: none;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: 0.3s;
+
+  &:hover {
+    transition: 0.3s;
+  }
+}
+
+.link {
+  text-decoration: none;
+  color: $chingu-blue;
+  transition: 0.3s;
+
+  &:hover {
+    color: $chingu-green;
+    transition: 0.3s;
+  }
+}
