Create HelpBoard component, styles, display connections

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -1,6 +1,13 @@
+// Applies to all styles
 @import './setup/variables';
 @import './setup/base';
+
+// Component styles
 @import './components/navbar';
 @import './components/app';
 @import './components/landing';
+@import './components/helpboard';
+
+// Specific query styles
 @import './components/userQuery';
+@import './components/connectionsQuery';
