--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import './components/app';
 @import './components/landing';
 @import './components/helpboard';
+@import './components/_profile';
 
 // Specific query styles
 @import './components/userQuery';
