--- a/client/src/styles/components/_connectionsQuery.scss
+++ b/client/src/styles/components/_connectionsQuery.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 20px 0;
 }
 
 .connection-card {
@@ -13,6 +14,7 @@
   color: $off-white;
   border-radius: 3px;
   box-shadow: 0 10px 15px -6px grey;
+  width: 400px;
 
   p {
     margin: 5px 0;
@@ -31,6 +33,8 @@
     font-size: 1.2em;
     border: none;
     outline: none;
+    text-transform: uppercase;
+    font-weight: 700;
 
     &:hover {
       background-color: darken($chingu-green, 10%);
