--- a/client/src/styles/components/_connectionsQuery.scss
+++ b/client/src/styles/components/_connectionsQuery.scss
@@ -1,15 +1,15 @@
 .connections-query-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  margin: 20px 0;
+  justify-content: space-between;
+  margin: 20px 30px;
 }
 
 .connection-card {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  margin: 10px;
+  margin: 20px 10px;
   background-color: $chingu-blue;
   color: $off-white;
   border-radius: 3px;
