--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -15,3 +15,12 @@
   color: $off-white;
   padding: 0 10px;
 }
+
+#chingu {
+  position: fixed;
+  left: 20px;
+
+  img {
+    height: 60px;
+  }
+}
