--- a/client/src/styles/components/_profile.scss
+++ b/client/src/styles/components/_profile.scss
@@ -10,6 +10,8 @@
     flex-direction: column;
     justify-content: flex-start;
     text-align: center;
+    width: 50%;
+    margin: 20px;
 
     label {
         text-align: center;
