--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -6,7 +6,7 @@
 @import './components/navbar';
 @import './components/app';
 @import './components/landing';
-@import './components/helpboard';
+@import './components/expressboard';
 @import './components/profile';
 @import './components/createConnection';
 
